# temporal

./: .gitignore  .gitmodules  README.md  __init__.py  paper_summary.md  pyproject.toml  requirements.txt
configs/: base_model.yaml  deploy.yaml  expert_distill.yaml  expert_distill_interx.yaml  groot_metacontroller.yaml  internal_rl.yaml  metacontroller.yaml  phase1_interx.yaml  phase1_pretrain.yaml  phase2_metacontroller.yaml  phase3_internal_rl.yaml  pi05_metacontroller.yaml
data/: human_motion_dataset.py  retargeting.py  robot_dataset.py
deploy/: pipeline.py  replanner.py  vlm_interface.py
docker/expert_distill/: Dockerfile  docker-compose.yml  entrypoint.sh  run_expert_distill.py
docs/: index.html
envs/: internal_env.py
models/: __init__.py  internal_rl_policy.py  metacontroller.py
notebooks/: expert_distill_colab.ipynb
paper/: root.tex  root_ko.md
reference/: vla_analysis.md
scripts/: collect_data.py  convert_interx.py  deploy.py  download_assets.py  evaluate.py  lerobot_visualization.py  run_all.py  run_vla.py  setup_server.sh  train_base_model.py  train_expert_distill.py  train_internal_rl.py  train_metacontroller.py  train_phase1.py  train_phase2.py  train_phase3.py
src/internalrl/: __init__.py
src/temporal/: __init__.py
tests/: test_gridworld.py  test_metacontroller.py  test_transformer.py
tests/test_vla/: __init__.py  test_metacontroller_vla.py  test_real_datasets.py  test_vla_data.py  test_vla_training.py
training/: expert_distill_trainer.py  phase1_trainer.py  phase2_trainer.py
utils/: metrics.py
website/: index.html
(+54 files in other folders)
