[project]
name = "temporal"
version = "0.1.0"
description = "Emergent Temporal Abstractions in Autoregressive Models Enable Hierarchical RL"
readme = "README.md"
authors = [
    { name = "angledsugar", email = "angledsugar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
vla = [
    "transformers>=4.53.0",
    "safetensors",
    "pillow",
    "accelerate",
    "einops",
    "huggingface_hub",
    "pandas",
    "pyarrow",
    "torchvision",
]
groot = [
    "transformers>=4.51.0",
    "safetensors",
    "pillow",
    "accelerate",
    "einops",
    "torchvision",
    "av",
    "diffusers>=0.35.0",
    "peft",
    "omegaconf",
    "dm-tree",
    "lmdb",
    "msgpack",
    "msgpack-numpy",
    "pandas",
    "termcolor",
    "opencv-python-headless",
    "albumentations",
    "tyro",
    "huggingface_hub",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
